Add config files for connection string

--- a/FlashcardsRevisited/app.config
+++ b/FlashcardsRevisited/app.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="ConnectionString" 
-			 connectionString="Server=(localdb)\FlashcardsProject;Database=FlashcardsDB;Trusted_Connection=True;TrustServerCertificate=True" 
+			 connectionString="Server=(localdb)\FlashcardsProject;Database=FlashcardsDB;Trusted_Connection=True;TrustServerCertificate=True;" 
 			 providerName="Microsoft.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
