add helper method to improve readability

--- a/FlashcardsRevisited/FlashcardsRevisited.csproj
+++ b/FlashcardsRevisited/FlashcardsRevisited.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="ConsoleTableExt" Version="3.3.0" />
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.4" />
+    <PackageReference Include="Spectre.Console" Version="0.54.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="10.0.2" />
   </ItemGroup>
 
